objects/Business_Site__c.object
<CustomObject>
    <description>Digital list of OEMs belonging to each account.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>LMA Account No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Sites</relationshipLabel>
        <relationshipName>Business_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAC__c</fullName>
        <label>BAC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <label>Dealer Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Franchise</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUMMER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volvo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IMR_Change_Date__c</fullName>
        <label>IMR Change Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMR__c</fullName>
        <label>IMR</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Sites (LMA Account)</relationshipLabel>
        <relationshipName>Business_Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Ad_Product_Status__c</fullName>
        <formula>IF( ISBLANK( LMA_Account__c ),&quot;&quot;,IF( LMA_Account__r.LMA_Product__c  &gt; 0, &apos;ACTIVE&apos;, &apos;INACTIVE&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMA Ad Product Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Code__c</fullName>
        <formula>LMA_Account__r.LMA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LMA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Division_Name__c</fullName>
        <label>Primary Division Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Division__c</fullName>
        <label>Primary Division</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Business Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>LMA_Account__c</columns>
        <columns>Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Business Site #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Sites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>